copied across changes from portfolio_copy

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,14 +9,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p class="padding-bottom">I’ve always been very creative with a flair for design and layout. I started out as a graphic artist but later joined the games industry as a storyboard artist. I have been modelling and animating for several years at some of the leading games studios in London.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p class="padding-bottom">Recently I completed the General Assembly Web Development Immersive course to further enhance my design skills. The course was full stack touching on all aspects of web development, from the back end all the way through to the front end and user experience. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                    <a href="http://media.wix.com/ugd/4a3e5f_e0548ef79a3943ca9acce318b421a6dc.doc?dn=Neil%20Crosbourne%20CV.doc" download class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> Download CV
                     </a>
                 </div>
             </div>
