--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -9,7 +9,7 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
-				<form  action="//formspree.io/you@email.com" method="POST" name="sentMessage" id="contactForm" novalidate>
+				<form  action="//formspree.io/neilcrosbourne@hotmail.com" method="POST" name="sentMessage" id="contactForm" novalidate>
 					<div class="row control-group">
 						<div class="form-group col-xs-12 floating-label-form-group controls">
 							<label>Name</label>
@@ -27,6 +27,13 @@
 					<div>
 						<input type="hidden"  name="_subject" value="New submission!">
 						<input type="text" name="_gotcha" style="display:none" />
+					</div>
+					<div class="row control-group">
+					    <div class="form-group col-xs-12 floating-label-form-group controls">
+					        <label>Phone Number</label>
+					        <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+					        <p class="help-block text-danger"></p>
+					    </div>
 					</div>
 					<div class="row control-group">
 						<div class="form-group col-xs-12 floating-label-form-group controls">
