--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - Games Character Artist</span>
+                        <span class="skills">Web Developer - Graphic Artist - 3D Character Artist</span>
                     </div>
                 </div>
             </div>
