--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,11 +4,9 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-6">
-                        <h3>Neil Crosbourne</h3>
-                        <p itemprop="jobtitle">Web Developer - 3D Character Artist</p>
+                        <h3>contact details</h3>
                         <p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                         <span itemprop="streetAddress">16 April Court Teale Street</span>
-                         <span itemprop="postalCode">E2 9AA</span>  
+                         <span itemprop="streetAddress"><a href="mailto:neilcrosbourne@hotmail.com" id="email">neilcrosbourne@hotmail.com</a></span>
                          </p>
                      <p itemprop="addressLocality">0773 998 5278</p>
                     </div>
@@ -19,7 +17,7 @@
                             <li>
                                 <a href="{{ network.url }}" class="btn-social btn-outline"><i class="fa fa-fw fa-{{ network.title }}"></i></a>
                             </li>
-		                    {% endfor %}
+                            {% endfor %}
                         </ul>
                     </div>
                 </div>
