--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -18,6 +18,8 @@
                             <p>{{ post.description }}</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
+                                    <strong><a>{{ post.client }}</a>
+                                    </strong>
                                 </li>
                                 <li>Date:
                                     <strong><a>{{ post.project-date }}</a>
