--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -75,7 +75,7 @@ hr.star-primary {
 
 hr.star-light:after,
 hr.star-primary:after {
-    content: "\f005";
+    content: "\f005" !important;
     display: inline-block;
     position: relative;
     top: -.8em;
