--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -66,6 +66,13 @@ h6 {
 hr.star-light,
 hr.star-primary {
     content: "\f005";
+    display: inline-block;
+    position: relative;
+    top: -.8em;
+    padding: 0 .25em;
+    font-family: FontAwesome;
+    font-size: 2em;
+    
     margin: 25px auto 30px;
     padding: 0;
     max-width: 250px;
